Add filters to list
