# src/Client/OpenAPIs/swagger.json
@@ -79,6 +79,15 @@
             "x-position": 1
           },
           {
+            "name": "assignedTo",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 2
+          },
+          {
             "name": "page",
             "in": "query",
             "schema": {
@@ -86,7 +95,7 @@
               "format": "int32",
               "default": 1
             },
-            "x-position": 2
+            "x-position": 3
           },
           {
             "name": "pageSize",
@@ -96,7 +105,7 @@
               "format": "int32",
               "default": 10
             },
-            "x-position": 3
+            "x-position": 4
           },
           {
             "name": "sortBy",
@@ -105,7 +114,7 @@
               "type": "string",
               "nullable": true
             },
-            "x-position": 4
+            "x-position": 5
           },
           {
             "name": "sortDirection",
@@ -122,7 +131,7 @@
                 }
               ]
             },
-            "x-position": 5
+            "x-position": 6
           }
         ],
         "responses": {
